--- a/src/scripts/ts/tsconfig.json
+++ b/src/scripts/ts/tsconfig.json
@@ -9,7 +9,9 @@
     "strict": true,
     "moduleResolution": "bundler",
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true
   },
 
   "include": [
